--- a/src/content/style.config.scss
+++ b/src/content/style.config.scss
@@ -1,3 +1,3 @@
-$base-color: #222222;
-$primary-color: lightblue;
-$secondary-color: steelblue;
+$bg-color: #222222;
+$gold: gold;
+$dark-blue: #000046;
